--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex: 1;
   padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
+  border-top: 1px solid #24263c;
   justify-content: center;
   align-items: center;
   margin-top: 10px;
