--- a/styles/globals.css
+++ b/styles/globals.css
@@ -84,9 +84,13 @@ a {
 }
 
 .dropzone {
-  margin: 20px 0;
+  display: flex;
   align-items: center;
   justify-content: center;
   cursor: pointer;
-  min-height: 150px;
+  position: absolute;
+  left: 20px;
+  right: 20px;
+  bottom: 20px;
+  top: 20px;
 }
